--- a/WebContent/workPackages.xhtml
+++ b/WebContent/workPackages.xhtml
@@ -48,7 +48,7 @@
 																	<h:outputText class="text-primary" value="${workpackage.status}"></h:outputText>
 																	</c:when>
 																	<c:when test="${workpackage.status == 'Done'}">
-																	<h:outputText class="text-sucess" value="${workpackage.status}"></h:outputText>
+																	<h:outputText class="text-success" value="${workpackage.status}"></h:outputText>
 																	</c:when>
 																	
 																</c:choose>
