--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -21,18 +21,18 @@
 				<h2 class="form-signin-heading">Connexion</h2>
 				<label for="inputName" class="sr-only">Nom d'utilisateur</label> <input
 					type="text" id="inputName" class="form-control"
-					placeholder="Username" data-toggle="tooltip"
-										data-placement="left"
-										title="Utilisateur/mot de passe incorrect"/><label
+					placeholder="Username" data-toggle="tooltip" data-placement="left"
+					title="Utilisateur/mot de passe incorrect" /><label
 					for="inputPassword" class="sr-only">Mot de passe</label> <input
 					type="password" id="inputPassword" class="form-control"
-					placeholder="Mot de passe"/>
-<!-- 				<div class="checkbox"> -->
-<!-- 					<label> <input type="checkbox" value="remember-me"> -->
-<!-- 							Remember me </label> -->
-<!-- 				</div> -->
+					placeholder="Mot de passe" />
+				<!-- 				<div class="checkbox"> -->
+				<!-- 					<label> <input type="checkbox" value="remember-me"> -->
+				<!-- 							Remember me </label> -->
+				<!-- 				</div> -->
 				<div class="form-group">
-				<button class="btn btn-lg btn-primary btn-block" id="submitConnexion" type="button">Connexion</button>
+					<button class="btn btn-lg btn-primary btn-block"
+						id="submitConnexion" type="button">Connexion</button>
 				</div>
 			</form>
 
