--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -14,10 +14,10 @@
 			<f:view>
 				<div class="container">
 					<div class="row">
-					
-					<!-- PATRON INTERFACE -->
-					
-						<c:choose>						
+
+						<!-- PATRON INTERFACE -->
+
+						<c:choose>
 
 							<c:when test="${ sessionScope.user.ability == 'Patron'}">
 								<div class="jumbotron">
@@ -204,8 +204,8 @@
 									<div class="container">
 										<h2>Bienvenue sur votre logiciel collaboratif ICBM !</h2>
 										<hr />
-										<h4>Vous pouvez consulter ici la répartition des différents
-											chapitres.</h4>
+										<h4>Vous pouvez consulter ici la répartition des
+											différents chapitres.</h4>
 									</div>
 								</div>
 								<c:set var="nbChapterCompany" value="0" />
@@ -225,11 +225,14 @@
 											items="${chapterDAO.chapterFromEntreprise(sessionScope.user.entreprise.id)}"
 											var="chapter">
 											<div class="col-md-12">
-												<dl>
-													<dt>
+												<div class="panel panel-default">
+													<div class="panel-heading">
 														<h:outputText value="${chapter.title}"></h:outputText>
-													</dt>
-												</dl>
+													</div>
+													<div class="panel-body">
+														<h:outputText value="Associé au WorkPackage : ${chapter.wp.name}"></h:outputText>
+													</div>
+												</div>
 											</div>
 										</c:forEach>
 										<c:if
@@ -243,7 +246,7 @@
 									<h4>Répartition actuelle des différents chapitres</h4>
 									<div class="row">
 										<div id="chapterChartDiv">
-											<canvas id="chapterChart" max-width="300" max-height="300"></canvas>
+											<canvas id="chapterChart" width="300" height="200"></canvas>
 										</div>
 									</div>
 								</div>
@@ -252,15 +255,16 @@
 								<c:set var="nbChapterTotal"
 									value="${chapterDAO.findAll().size()}" />
 
-								<input id="companyName" value="${sessionScope.user.entreprise.name}"
-									type="hidden" />
+								<input id="companyName"
+									value="${sessionScope.user.entreprise.name}" type="hidden" />
 								<input id="nbChapterCompany" value="${nbChapterCompany}"
 									type="hidden" />
-								<input id="nbOtherChapter" value="${nbChapterTotal - nbChapterCompany}"
-									type="hidden" />
+								<input id="nbOtherChapter"
+									value="${nbChapterTotal - nbChapterCompany}" type="hidden" />
 								<input id="nbChapterTotal" value="${nbChapterTotal}"
 									type="hidden" />
-								<script type="text/javascript" src="resources/js/userBarChart.js"></script>
+								<script type="text/javascript"
+									src="resources/js/userBarChart.js"></script>
 							</c:when>
 						</c:choose>
 					</div>
