ajout bouton annuler page entreprise

--- a/WebContent/companies.xhtml
+++ b/WebContent/companies.xhtml
@@ -52,10 +52,10 @@
 
 															</c:if>
 														</c:forEach>
-													</select> <BR />
-													<a class="btn btn-success" role="button"
+													</select> <BR /> <a class="btn btn-success" role="button"
 														onclick="updateChiefEntreprise(${entreprise.id})" href="#">Mettre
-														à jour</a>
+														à jour</a> <a class="btn btn-danger" role="button"
+														onclick="hideDiv()" href="#">Annuler</a>
 												</div>
 
 											</div>
