correction affichage home page

--- a/WebContent/companies.xhtml
+++ b/WebContent/companies.xhtml
@@ -53,9 +53,9 @@
 															</c:if>
 														</c:forEach>
 													</select> <BR /> <a class="btn btn-success" role="button"
-														onclick="updateChiefEntreprise(${entreprise.id})" href="#">Mettre
+														onclick="updateChiefEntreprise(${entreprise.id})">Mettre
 														à jour</a> <a class="btn btn-danger" role="button"
-														onclick="hideDiv(${entreprise.id})" href="#">Annuler</a>
+														onclick="hideDiv(${entreprise.id})">Annuler</a>
 												</div>
 
 											</div>
