--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -43,14 +43,16 @@
 
 											<div class="panel panel-default">
 												<div class="panel-heading">
-													<c:if test="${workpackages.size() != 0}">
-														<h4>
-															<h:outputText value="${ent.name}"></h:outputText>
-														</h4>
-													</c:if>
+													<h4>
+														<h:outputText value="${ent.name}"></h:outputText>
+													</h4>
 												</div>
 
 												<div class="panel-body">
+													<c:if test="${workpackages.size() eq 0}">
+														<h:outputText
+															value="Cette entreprise n'a pas de workPackage."></h:outputText>
+													</c:if>
 													<c:forEach items="${workpackages}" var="workpackage">
 														<div class="row">
 															<div class="col-md-10">
@@ -230,7 +232,8 @@
 														<h:outputText value="${chapter.title}"></h:outputText>
 													</div>
 													<div class="panel-body">
-														<h:outputText value="Associé au WorkPackage : ${chapter.wp.name}"></h:outputText>
+														<h:outputText
+															value="Associé au WorkPackage : ${chapter.wp.name}"></h:outputText>
 													</div>
 												</div>
 											</div>
